--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,6 +2,7 @@
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
     "/assets/admin/css/styles.css": "/assets/admin/css/styles.css",
+    "/assets/css/styles.css": "/assets/css/styles.css",
     "/assets/admin/js/scripts.js": "/assets/admin/js/scripts.js",
     "/assets/admin/webfonts/fa-brands-400.eot": "/assets/admin/webfonts/fa-brands-400.eot",
     "/assets/admin/webfonts/fa-brands-400.svg": "/assets/admin/webfonts/fa-brands-400.svg",
@@ -18,33 +19,7 @@
     "/assets/admin/webfonts/fa-solid-900.ttf": "/assets/admin/webfonts/fa-solid-900.ttf",
     "/assets/admin/webfonts/fa-solid-900.woff": "/assets/admin/webfonts/fa-solid-900.woff",
     "/assets/admin/webfonts/fa-solid-900.woff2": "/assets/admin/webfonts/fa-solid-900.woff2",
-    "/assets/admin/img/AdminLTELogo.png": "/assets/admin/img/AdminLTELogo.png",
-    "/assets/admin/img/avatar.png": "/assets/admin/img/avatar.png",
-    "/assets/admin/img/avatar2.png": "/assets/admin/img/avatar2.png",
-    "/assets/admin/img/avatar3.png": "/assets/admin/img/avatar3.png",
-    "/assets/admin/img/avatar4.png": "/assets/admin/img/avatar4.png",
-    "/assets/admin/img/avatar5.png": "/assets/admin/img/avatar5.png",
-    "/assets/admin/img/boxed-bg.jpg": "/assets/admin/img/boxed-bg.jpg",
-    "/assets/admin/img/boxed-bg.png": "/assets/admin/img/boxed-bg.png",
-    "/assets/admin/img/default-150x150.png": "/assets/admin/img/default-150x150.png",
-    "/assets/admin/img/icons.png": "/assets/admin/img/icons.png",
-    "/assets/admin/img/photo1.png": "/assets/admin/img/photo1.png",
-    "/assets/admin/img/photo2.png": "/assets/admin/img/photo2.png",
-    "/assets/admin/img/photo3.jpg": "/assets/admin/img/photo3.jpg",
-    "/assets/admin/img/photo4.jpg": "/assets/admin/img/photo4.jpg",
-    "/assets/admin/img/prod-1.jpg": "/assets/admin/img/prod-1.jpg",
-    "/assets/admin/img/prod-2.jpg": "/assets/admin/img/prod-2.jpg",
-    "/assets/admin/img/prod-3.jpg": "/assets/admin/img/prod-3.jpg",
-    "/assets/admin/img/prod-4.jpg": "/assets/admin/img/prod-4.jpg",
-    "/assets/admin/img/prod-5.jpg": "/assets/admin/img/prod-5.jpg",
-    "/assets/admin/img/user1-128x128.jpg": "/assets/admin/img/user1-128x128.jpg",
-    "/assets/admin/img/user2-160x160.jpg": "/assets/admin/img/user2-160x160.jpg",
-    "/assets/admin/img/user3-128x128.jpg": "/assets/admin/img/user3-128x128.jpg",
-    "/assets/admin/img/user4-128x128.jpg": "/assets/admin/img/user4-128x128.jpg",
-    "/assets/admin/img/user5-128x128.jpg": "/assets/admin/img/user5-128x128.jpg",
-    "/assets/admin/img/user6-128x128.jpg": "/assets/admin/img/user6-128x128.jpg",
-    "/assets/admin/img/user7-128x128.jpg": "/assets/admin/img/user7-128x128.jpg",
-    "/assets/admin/img/user8-128x128.jpg": "/assets/admin/img/user8-128x128.jpg",
-    "/assets/admin/css/adminlte.min.css.map": "/assets/admin/css/adminlte.min.css.map",
+    "/assets/webfonts/Koulen-Regular.ttf": "/assets/webfonts/Koulen-Regular.ttf",
+    "/assets/admin/css/adminlte.css.map": "/assets/admin/css/adminlte.css.map",
     "/assets/admin/js/adminlte.min.js.map": "/assets/admin/js/adminlte.min.js.map"
 }
